Avoid creating new base object wrappers; instead use valueOf.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@682253 13f79535-47bb-0310-9956-ffa450edef68